the cookie caller color is now transparent to prevent the text from being visible

--- a/src/Resources/public/css/pslzme-cookie-caller.css
+++ b/src/Resources/public/css/pslzme-cookie-caller.css
@@ -43,7 +43,7 @@
 	background-position: center center;
 	background-repeat: no-repeat;
 	font-size: 2.1rem;
-	color: inherit;
+	color: transparent;
 	list-style: none;
 }
 
